# Anthon-Starter

./: .gitignore  .gitmodules  .travis.yml  AUTHOR  Makefile  Makefile.in  Makefile.windows  README.md  TODO  TODO.md  UAC.manifest  ast.c  ast.rc  backup.c  bcde.bat  chkargs.c  clrprint.c  configure.ac  defs.h  deploy.c  extract.c  funcs.h  getsysinfo.c  gpte.bat  help_message.c  includings.h  init.bat  init.c  lang_en-US.h  main.bat  main.c  md5sum.ast  misc-list.txt  run.c  startup.bat  verify.c
Linux/: EHL3-Setup  MagicLive-Setup  anthon-starter
bundle/: README.md
doc/: ast-wiki-zh_CN-full.mediawiki  md5sum-in-image-standard
misc/: g2ldr  g2ldr.mbr  grub-efi.cfg  grub-pc.cfg
res/: README.md
source/: init.bat  main.bat  startup.bat
src/: Makefile  README.md  UAC.manifest  about.c  ast.h  ast.rc  backup.c  bootx64.efi  chkargs.c  clrprint.c  clrprintf.c  config.h.in  defs.h  deploy.c  duplicate.c  extract.c  fclrprintf.c  funcs.h  getsysinfo.c  help_message.c  info.c  init.c  main.c  md5sum.c  mem_alloc.c  mem_alloc.h  notify.c  oops.c  run.c  strconv.c  strconv.h  take.c  tools  verify.c
testing/: 32-64-wow-test.c  README.md  alloc_s.c  backup.h  boot.ini  color.cpp  cpuid.c  duplicate.c  efi-part-read.c  getenv.c  malloc_s.c  mbr_backup.c  md5-test.c  md5sum.h  mddriver-test.c  mem_alloc  mem_alloc.c  popen-test.c
unit-test/aosc-test-new/: md5sum
unit-test/aosc-test-new/boot/: initrd  vmlinuz
unit-test/aosc-test-new/live/: live.squashfs
